*Added parallel execution *Added README.md